--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "heroku-postbuild": "yarn build"
+    "heroku-postbuild": "nuxt build"
   },
   "dependencies": {
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
