--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "@nuxt/components": "^1.1.1",
     "@nuxtjs/color-mode": "^2.0.0",
     "@nuxtjs/fontawesome": "^1.1.2",
+    "@nuxtjs/style-resources": "^1.0.0",
     "@nuxtjs/tailwindcss": "^3.2.0",
     "core-js": "^3.6.5",
+    "node-sass": "^5.0.0",
     "nuxt": "^2.14.7",
+    "nuxt-purgecss": "^1.0.0",
+    "sass-loader": "^10.0.5",
     "tailwindcss-dark-mode": "^1.1.7"
   },
   "devDependencies": {}
