--- a/package.json
+++ b/package.json
@@ -10,11 +10,8 @@
     "heroku-postbuild": "nuxt build"
   },
   "dependencies": {
-    "@fortawesome/free-regular-svg-icons": "^5.15.1",
-    "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@nuxt/components": "^1.1.1",
     "@nuxtjs/color-mode": "^2.0.0",
-    "@nuxtjs/fontawesome": "^1.1.2",
     "@nuxtjs/style-resources": "^1.0.0",
     "@nuxtjs/tailwindcss": "^3.2.0",
     "core-js": "^3.6.5",
@@ -22,7 +19,8 @@
     "nuxt": "^2.14.7",
     "nuxt-purgecss": "^1.0.0",
     "sass-loader": "^10.0.5",
-    "tailwindcss-dark-mode": "^1.1.7"
+    "tailwindcss-dark-mode": "^1.1.7",
+    "vue-unicons": "^2.3.0"
   },
   "devDependencies": {}
 }
