--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "clinix-app",
+  "author": "Clinix Team",
+  "description": "Get Healthy Everyday With Us",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -12,6 +14,7 @@
   "dependencies": {
     "@nuxt/components": "^1.1.1",
     "@nuxtjs/color-mode": "^2.0.0",
+    "@nuxtjs/pwa": "^3.2.2",
     "@nuxtjs/style-resources": "^1.0.0",
     "@nuxtjs/tailwindcss": "^3.2.0",
     "core-js": "^3.6.5",
